workshop-devops-na-nuvem/04-dnv-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: workshop-load-balancer
    alb.ingress.kubernetes.io/subnets: subnet-04c4cf9c62417436f, subnet-0b3c1fd166ed11082
    alb.ingress.kubernetes.io/listener-ports: '[{"HTTP": 80}]'

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
